--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -262,6 +262,7 @@
                         style="@style/Widget.Material3.Button.TextButton"
                         android:layout_width="70dp"
                         android:layout_height="34dp"
+                        android:textSize="12sp"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
                         android:insetLeft="0dp"
@@ -269,7 +270,7 @@
                         android:insetRight="0dp"
                         android:insetBottom="0dp"
                         android:text="See All"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         app:cornerRadius="10dp" />
                 </RelativeLayout>
 
