--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -187,6 +187,7 @@
                             android:id="@+id/tapToAddBankTv"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:layout_marginTop="26dp"
                             android:gravity="center"
                             android:text="Tap to Link
                             Bank Account"
