--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -16,13 +16,32 @@
         android:layout_marginEnd="40dp"
         android:orientation="vertical">
 
+
         <TextView
-            android:id="@+id/textTv"
+            android:id="@+id/appTitleTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:paddingBottom="20dp"
+            android:text="Xpense"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:textSize="28sp" />
+
+        <TextView
+            android:id="@+id/textTv"
+            android:layout_below="@id/appTitleTv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
             android:paddingBottom="30dp"
-            android:text="We will send you an One Time Password on this phone number"
+            android:text="Please input your phone number in order to log into your account.\n\nWe will send you an One Time Password on this phone number"
             android:textAlignment="center"
             android:textSize="16sp" />
 
@@ -44,7 +63,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="phone"
-                android:text="+40767031267" />
+                android:text="+40" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <!--Button for getting OTP-->
@@ -53,8 +72,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/phoneNrLayout"
-            android:layout_margin="10dp"
-            android:text="Get OTP"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Log In"
             android:textAllCaps="false"
             app:cornerRadius="12dp" />
 
