--- a/app/src/main/res/layout/fragment_connect_to_bank.xml
+++ b/app/src/main/res/layout/fragment_connect_to_bank.xml
@@ -36,7 +36,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_toEndOf="@id/backBtn"
                 android:text="Select bank"
-                android:textSize="18sp"
+                android:textSize="@dimen/fragment_title_size"
                 android:textStyle="bold" />
         </RelativeLayout>
 
