--- a/app/src/main/res/layout/fragment_analytics.xml
+++ b/app/src/main/res/layout/fragment_analytics.xml
@@ -38,7 +38,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_toEndOf="@id/backBtn"
                 android:text="@string/analytics"
-                android:textSize="24sp"
+                android:textSize="@dimen/fragment_title_size"
                 android:textStyle="bold" />
 
 
