--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -38,7 +38,7 @@
                 android:layout_toStartOf="@id/refreshBtn"
                 android:layout_toEndOf="@id/backBtn"
                 android:text="Invite Partner"
-                android:textSize="18sp"
+                android:textSize="@dimen/fragment_title_size"
                 android:textStyle="bold" />
 
             <com.google.android.material.button.MaterialButton
