--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -38,7 +38,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_toEndOf="@id/backBtn"
                 android:text="Settings"
-                android:textSize="18sp"
+                android:textSize="@dimen/fragment_title_size"
                 android:textStyle="bold"
                 tools:ignore="HardcodedText" />
 
