delete unused fragment

--- a/app/src/main/res/layout/fragment_list_transactions.xml
+++ b/app/src/main/res/layout/fragment_list_transactions.xml
@@ -25,6 +25,10 @@
                 android:layout_height="50dp"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="4dp"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
                 app:icon="@drawable/ic_round_arrow_back_ios_24"
                 app:iconGravity="start"
                 app:iconPadding="0dp"
@@ -34,7 +38,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="16dp"
                 android:layout_toEndOf="@id/backBtn"
                 android:text="Transactions"
                 android:textSize="@dimen/fragment_title_size"
