--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -315,6 +315,7 @@
                     android:layout_marginBottom="8dp"
                     android:clickable="true"
                     app:cardBackgroundColor="@color/cards_bg_color"
+                    app:cardCornerRadius="@dimen/main_cards_corner_radius"
                     app:strokeWidth="0dp">
 
                     <include
