--- a/app/src/main/res/layout/fragment_add_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_transaction.xml
@@ -38,7 +38,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="16dp"
                 android:layout_toEndOf="@id/backBtn"
-                android:text="Add Transaction"
+                android:text="New Transaction"
                 android:textSize="@dimen/fragment_title_size"
                 android:textStyle="bold" />
 
@@ -257,8 +257,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_margin="18dp"
-        android:text="Save Transaction"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="18dp"
+        android:text="@string/add_transaction_add_btn"
         app:cornerRadius="10dp" />
 
 </RelativeLayout>
