--- a/app/src/main/res/layout/fragment_add_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_transaction.xml
@@ -181,20 +181,11 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
-                android:id="@+id/selectedTextDummy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/amountInputLayout"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="18dp"
-                android:text="Expense Category"
-                android:textSize="12sp" />
-
-            <TextView
                 android:id="@+id/pleaseSelectTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/amountInputLayout"
+                android:layout_centerHorizontal="true"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="18dp"
                 android:text="Please select a category first"
@@ -203,34 +194,57 @@
                 android:visibility="gone"
                 tools:visibility="visible" />
 
-            <RelativeLayout
-                android:id="@+id/transactionCategoryLayout"
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/selectedCategoryCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/selectedTextDummy"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="22dp"
+                android:layout_below="@id/pleaseSelectTv"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="18dp"
+                android:layout_marginEnd="18dp"
                 android:clickable="true"
-                android:minHeight="40dp">
+                app:cardBackgroundColor="@color/cards_bg_color"
+                app:strokeWidth="0dp">
 
-                <com.google.android.material.chip.ChipGroup
-                    android:id="@+id/categoryChipGroup"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:chipSpacingHorizontal="8dp"
-                    app:chipSpacingVertical="1dp"
-                    app:selectionRequired="true"
-                    app:singleSelection="true" />
+                    android:layout_height="match_parent">
 
-            </RelativeLayout>
+                    <com.google.android.material.chip.Chip
+                        android:id="@+id/selectedCategoryChip"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="18dp"
+                        android:layout_marginTop="14dp"
+                        android:clickable="false"
+                        android:focusable="false"
+                        android:text="Groceries"
+                        app:chipBackgroundColor="@color/cards_bg_color"
+                        app:chipIcon="@drawable/ic_baseline_local_grocery_store_24"
+                        app:chipIconTint="#B2FF59"
+                        app:chipStrokeWidth="0dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/selectedCategoryChip"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="18dp"
+                        android:text="Tap to change"
+                        android:textSize="10sp" />
+
+
+                </RelativeLayout>
+            </com.google.android.material.card.MaterialCardView>
 
 
             <com.google.android.material.switchmaterial.SwitchMaterial
                 android:id="@+id/cashSwitch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/transactionCategoryLayout"
+                android:layout_below="@id/selectedCategoryCard"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="8dp"
                 android:text="Cash transaction" />
